# pypetal

./: Cargo.toml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
petal/: __init__.py
src/: decomposition.rs  lib.rs  neighbors.rs
