[package]
name = "pypetal"
version = "0.1.0"
authors = ["Min Kim <msk@dolbo.net>"]
rust-version = "1.65"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = "0.15"
petal-decomposition = "0.7.0"
pyo3 = { version = "0.15", features = ["extension-module"] }

[lib]
name = "decomposition"
crate-type = ["cdylib"]
