[package]
name = "pypetal"
version = "0.1.0"
authors = ["Min Kim <msk@dolbo.net>"]
rust-version = "1.74"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = "0.26"
petal-decomposition = "0.8.0"
pyo3 = { version = "0.26", features = ["extension-module"] }

[lib]
name = "decomposition"
crate-type = ["cdylib"]
