[package]
name = "pypetal"
version = "0.1.0"
authors = ["Min Kim <msk@dolbo.net>"]
rust-version = "1.83"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = "0.27.1"
petal-decomposition = "0.9"
petal-neighbors = "0.18"
pyo3 = { version = "0.27", features = ["extension-module"] }

[lib]
name = "pypetal"
crate-type = ["cdylib"]
